Bug 1250776 - increase JavaScript runtime heap size to 4 MB; r=bagder

MozReview-Commit-ID: 9rx2wRSgNHw

--HG--
extra : rebase_source : f17e867f84d18e8b61c4e34d57727270c6598c1b